Ai chat fixes -pt 1(#114)
* correctly store referenced courses as json

* fix genai db connection

* correctly store referenced courses as json

* fix genai db connection

* possibly fix ai conversation data transfer. increase logging level for server, add more fields to Profile, add exception handler to genai for better logging

* make /profile page load, add sourcemaps to docker build, disable profile edit/update on client side for now, create empty profiles when registering a new user, change the expected form of /profile response in client

* formatting/reviews

* formatting

* fix tests

* formatting

* review

---------

Co-authored-by: daniel <ge64tap@mytum.de>